<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".dialogs.AddAppointmentFragment">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        app:backgroundTint="@color/blue_grey_600"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:fabSize="mini"
        android:id="@+id/close_fab_app"
        app:tint="@color/white"
        android:src="@drawable/baseline_close_white_24dp"
        tools:ignore="ContentDescription" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/please_select_the_required"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:id="@+id/txt_user_name"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            app:iconGravity="start"
            app:backgroundTint="#045421"
            app:icon="@drawable/baseline_date_range_white_24dp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:id="@+id/btn_date_picker"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_margin="10dp"
            app:backgroundTint="#045421"
            app:iconGravity="end"
            app:icon="@drawable/baseline_access_time_white_24dp"
            android:text="@string/time"
            android:id="@+id/btn_time_picker"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_margin="10dp"
            android:text="@string/select_name"
            app:backgroundTint="#045421"
            android:visibility="visible"
            app:iconGravity="start"
            android:id="@+id/btn_subject_picker"
            app:icon="@drawable/baseline_subject_white_24dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_margin="10dp"
            android:text="@string/txt_select_grade"

            app:backgroundTint="#045421"
            android:visibility="visible"
            android:id="@+id/btn_grade_picker"
            app:iconGravity="end"
            app:icon="@drawable/baseline_grade_white_24dp"
            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="3dp"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_margin="10dp"
        app:backgroundTint="@color/blue_grey_800"
        android:text="@string/submit"
        app:icon="@drawable/baseline_double_arrow_black_24dp"
        android:id="@+id/btn_submit_appointment"
        app:iconGravity="end"
        />

</LinearLayout>