<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:layout_margin="5dp"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/row_m_profile"
            android:src="@drawable/baseline_account_circle_black_24dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/row_m_names"
            android:layout_gravity="center_horizontal"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:id="@+id/row_m_description"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/row_m_btn_message"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_weight="50"
                android:text="@string/txt_message"
                app:icon="@drawable/baseline_mail_outline_white_24dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/row_m_btn_profile"
                android:layout_margin="10dp"
                android:text="@string/txt_profile"
                app:icon="@drawable/baseline_account_circle_black_24dp"
                />
        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>